# myr

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  fast-mysql-tui-explorer-backlog.md
.github/workflows/: ci.yml  release.yml
Formula/: myr.rb
app/: Cargo.toml
app/src/: main.rs
bench/: README.md  docker-compose.yml  perf-trend-policy.json
bench/scripts/: run_benchmark.sh
bucket/: myr.json
crates/adapters/: Cargo.toml
crates/adapters/src/: export.rs  lib.rs  mysql.rs
crates/adapters/tests/: mysql_integration.rs
crates/core/: Cargo.toml
crates/core/src/: actions_engine.rs  audit_trail.rs  bookmarks.rs  connection_manager.rs  lib.rs  profiles.rs  query_runner.rs  results_buffer.rs  safe_mode.rs  schema_cache.rs  sql_generator.rs
crates/core/src/actions_engine/: catalog.rs  context.rs  enablement.rs  engine.rs  invocation.rs  mod.rs  ranking.rs  snippets.rs  suggestions.rs  tests.rs
crates/core/src/schema_cache/: mod.rs  relationships.rs  service.rs  tests.rs  types.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs  lib_helpers.rs  tests.rs
crates/tui/src/app_logic/: default.rs  input.rs  mod.rs  navigation.rs  query_actions.rs  runtime.rs
crates/tui/src/app_logic/navigation/: bookmarks.rs  export.rs  manager_interactions.rs  palette.rs  palette_search.rs  pane_movement.rs  results_navigation.rs  schema_filters.rs  schema_traversal.rs
crates/tui/src/app_logic/query_actions/: action_dispatch.rs  error_panel.rs  pagination.rs  pane_state.rs  query_execution.rs
crates/tui/src/app_logic/runtime/: connect.rs  handle.rs  query.rs
crates/tui/src/rendering/: chrome.rs  mod.rs  overlays.rs  pane_connection.rs  pane_manager.rs  pane_query_editor.rs  pane_results.rs  pane_schema.rs  support.rs
crates/tui/src/state/: app.rs  mod.rs  navigation.rs  pagination.rs  runtime.rs  wizard.rs
crates/tui/src/tests/snapshots/: pane_connection_wizard.snap  pane_profile_bookmark_manager.snap  pane_query_editor.snap  pane_results.snap  pane_schema_explorer.snap  popup_error_panel.snap  popup_exit_confirmation.snap  popup_help.snap  popup_palette.snap
docs/: README.md  action-engine-extension.md  architecture.md  manual-testing.md  quality.md  release.md  roadmap.md
scripts/: codex-roadmap-loop.sh  dev-db-seed.sh  update-install-channels.sh
