[package]
name = "myr-app"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "myr-app"

[dependencies]
myr-core = { path = "../crates/core" }
myr-tui = { path = "../crates/tui" }
myr-adapters = { path = "../crates/adapters" }
tokio = { version = "1", features = ["macros", "rt"] }
