[package]
name = "myr-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
crossterm = "0.28"
myr-adapters = { path = "../adapters" }
myr-core = { path = "../core" }
ratatui = "0.29"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time"] }
